// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeaturedTitle component should render with Icon 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={undefined}
    style={
        Array [
            Object {
              "height": 600,
              "width": 750,
            },
            Object {
              "height": 70,
            },
          ]
    }
>
    <Image
        source={
            Object {
                "url": "http://google.com",
              }
        }
        style={
            Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "height": 600,
                  "justifyContent": "center",
                  "resizeMode": "cover",
                  "width": 750,
                },
                Object {
                  "height": 70,
                },
              ]
        }
    >
        <View
            style={
                Array [
                    Object {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "backgroundColor": "rgba(0,0,0,0.2)",
                      "bottom": 0,
                      "flex": 1,
                      "justifyContent": "center",
                      "left": 0,
                      "paddingBottom": 40,
                      "paddingLeft": 25,
                      "paddingRight": 25,
                      "paddingTop": 45,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    Object {
                      "height": 70,
                    },
                  ]
            }
        >
            <View
                style={
                    Array [
                        Object {
                          "alignItems": "center",
                          "alignSelf": "center",
                          "justifyContent": "center",
                        },
                        Object {
                          "height": 70,
                        },
                      ]
                }
            >
                <Icon
                    color="black"
                    name="play-circle"
                    raised={false}
                    reverse={false}
                    reverseColor="white"
                    size={24}
                    type="font-awesome"
                    underlayColor="white"
                />
            </View>
            <TextElement
                h4={true}
                style={
                    Array [
                        Object {
                          "backgroundColor": "rgba(0,0,0,0)",
                          "color": "#ffffff",
                          "marginBottom": 15,
                          "textAlign": "center",
                        },
                        Object {
                          "backgroundColor": "yellow",
                        },
                      ]
                }
            />
            <TextElement
                style={
                    Array [
                        Object {
                          "backgroundColor": "rgba(0,0,0,0)",
                          "color": "#ffffff",
                          "marginBottom": 15,
                          "textAlign": "center",
                        },
                        Object {
                          "color": "blue",
                        },
                      ]
                }
            />
        </View>
    </Image>
</TouchableOpacity>,
  "nodes": Array [
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onPress={undefined}
      style={
            Array [
                  Object {
                    "height": 600,
                    "width": 750,
                  },
                  Object {
                    "height": 70,
                  },
                ]
      }
>
      <Image
            source={
                  Object {
                        "url": "http://google.com",
                      }
            }
            style={
                  Array [
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#ffffff",
                          "height": 600,
                          "justifyContent": "center",
                          "resizeMode": "cover",
                          "width": 750,
                        },
                        Object {
                          "height": 70,
                        },
                      ]
            }
      >
            <View
                  style={
                        Array [
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "rgba(0,0,0,0.2)",
                                "bottom": 0,
                                "flex": 1,
                                "justifyContent": "center",
                                "left": 0,
                                "paddingBottom": 40,
                                "paddingLeft": 25,
                                "paddingRight": 25,
                                "paddingTop": 45,
                                "position": "absolute",
                                "right": 0,
                                "top": 0,
                              },
                              Object {
                                "height": 70,
                              },
                            ]
                  }
            >
                  <View
                        style={
                              Array [
                                    Object {
                                      "alignItems": "center",
                                      "alignSelf": "center",
                                      "justifyContent": "center",
                                    },
                                    Object {
                                      "height": 70,
                                    },
                                  ]
                        }
                  >
                        <Icon
                              color="black"
                              name="play-circle"
                              raised={false}
                              reverse={false}
                              reverseColor="white"
                              size={24}
                              type="font-awesome"
                              underlayColor="white"
                        />
                  </View>
                  <TextElement
                        h4={true}
                        style={
                              Array [
                                    Object {
                                      "backgroundColor": "rgba(0,0,0,0)",
                                      "color": "#ffffff",
                                      "marginBottom": 15,
                                      "textAlign": "center",
                                    },
                                    Object {
                                      "backgroundColor": "yellow",
                                    },
                                  ]
                        }
                  />
                  <TextElement
                        style={
                              Array [
                                    Object {
                                      "backgroundColor": "rgba(0,0,0,0)",
                                      "color": "#ffffff",
                                      "marginBottom": 15,
                                      "textAlign": "center",
                                    },
                                    Object {
                                      "color": "blue",
                                    },
                                  ]
                        }
                  />
            </View>
      </Image>
</TouchableOpacity>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <FeaturedTile
        captionStyle={
                Object {
                        "color": "blue",
                      }
        }
        containerStyle={
                Object {
                        "height": 70,
                      }
        }
        icon={
                Object {
                        "name": "play-circle",
                        "type": "font-awesome",
                      }
        }
        iconContainerStyle={
                Object {
                        "height": 70,
                      }
        }
        imageContainerStyle={
                Object {
                        "height": 70,
                      }
        }
        imageSrc={
                Object {
                        "url": "http://google.com",
                      }
        }
        overlayContainerStyle={
                Object {
                        "height": 70,
                      }
        }
        titleStyle={
                Object {
                        "backgroundColor": "yellow",
                      }
        }
/>,
      "_debugID": 5,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "captionStyle": Object {
            "color": "blue",
          },
          "containerStyle": Object {
            "height": 70,
          },
          "icon": Object {
            "name": "play-circle",
            "type": "font-awesome",
          },
          "iconContainerStyle": Object {
            "height": 70,
          },
          "imageContainerStyle": Object {
            "height": 70,
          },
          "imageSrc": Object {
            "url": "http://google.com",
          },
          "overlayContainerStyle": Object {
            "height": 70,
          },
          "titleStyle": Object {
            "backgroundColor": "yellow",
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "height": 600,
                                "width": 750,
                              },
                              Object {
                                "height": 70,
                              },
                            ]
          }
>
          <Image
                    source={
                              Object {
                                        "url": "http://google.com",
                                      }
                    }
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "backgroundColor": "#ffffff",
                                          "height": 600,
                                          "justifyContent": "center",
                                          "resizeMode": "cover",
                                          "width": 750,
                                        },
                                        Object {
                                          "height": 70,
                                        },
                                      ]
                    }
          >
                    <View
                              style={
                                        Array [
                                                  Object {
                                                    "alignItems": "center",
                                                    "alignSelf": "stretch",
                                                    "backgroundColor": "rgba(0,0,0,0.2)",
                                                    "bottom": 0,
                                                    "flex": 1,
                                                    "justifyContent": "center",
                                                    "left": 0,
                                                    "paddingBottom": 40,
                                                    "paddingLeft": 25,
                                                    "paddingRight": 25,
                                                    "paddingTop": 45,
                                                    "position": "absolute",
                                                    "right": 0,
                                                    "top": 0,
                                                  },
                                                  Object {
                                                    "height": 70,
                                                  },
                                                ]
                              }
                    >
                              <View
                                        style={
                                                  Array [
                                                            Object {
                                                              "alignItems": "center",
                                                              "alignSelf": "center",
                                                              "justifyContent": "center",
                                                            },
                                                            Object {
                                                              "height": 70,
                                                            },
                                                          ]
                                        }
                              >
                                        <Icon
                                                  color="black"
                                                  name="play-circle"
                                                  raised={false}
                                                  reverse={false}
                                                  reverseColor="white"
                                                  size={24}
                                                  type="font-awesome"
                                                  underlayColor="white"
                                        />
                              </View>
                              <TextElement
                                        h4={true}
                                        style={
                                                  Array [
                                                            Object {
                                                              "backgroundColor": "rgba(0,0,0,0)",
                                                              "color": "#ffffff",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            Object {
                                                              "backgroundColor": "yellow",
                                                            },
                                                          ]
                                        }
                              />
                              <TextElement
                                        style={
                                                  Array [
                                                            Object {
                                                              "backgroundColor": "rgba(0,0,0,0)",
                                                              "color": "#ffffff",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            Object {
                                                              "color": "blue",
                                                            },
                                                          ]
                                        }
                              />
                    </View>
          </Image>
</TouchableOpacity>,
        "_debugID": 6,
        "_renderedOutput": <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "height": 600,
                                "width": 750,
                              },
                              Object {
                                "height": 70,
                              },
                            ]
          }
>
          <Image
                    source={
                              Object {
                                        "url": "http://google.com",
                                      }
                    }
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "backgroundColor": "#ffffff",
                                          "height": 600,
                                          "justifyContent": "center",
                                          "resizeMode": "cover",
                                          "width": 750,
                                        },
                                        Object {
                                          "height": 70,
                                        },
                                      ]
                    }
          >
                    <View
                              style={
                                        Array [
                                                  Object {
                                                    "alignItems": "center",
                                                    "alignSelf": "stretch",
                                                    "backgroundColor": "rgba(0,0,0,0.2)",
                                                    "bottom": 0,
                                                    "flex": 1,
                                                    "justifyContent": "center",
                                                    "left": 0,
                                                    "paddingBottom": 40,
                                                    "paddingLeft": 25,
                                                    "paddingRight": 25,
                                                    "paddingTop": 45,
                                                    "position": "absolute",
                                                    "right": 0,
                                                    "top": 0,
                                                  },
                                                  Object {
                                                    "height": 70,
                                                  },
                                                ]
                              }
                    >
                              <View
                                        style={
                                                  Array [
                                                            Object {
                                                              "alignItems": "center",
                                                              "alignSelf": "center",
                                                              "justifyContent": "center",
                                                            },
                                                            Object {
                                                              "height": 70,
                                                            },
                                                          ]
                                        }
                              >
                                        <Icon
                                                  color="black"
                                                  name="play-circle"
                                                  raised={false}
                                                  reverse={false}
                                                  reverseColor="white"
                                                  size={24}
                                                  type="font-awesome"
                                                  underlayColor="white"
                                        />
                              </View>
                              <TextElement
                                        h4={true}
                                        style={
                                                  Array [
                                                            Object {
                                                              "backgroundColor": "rgba(0,0,0,0)",
                                                              "color": "#ffffff",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            Object {
                                                              "backgroundColor": "yellow",
                                                            },
                                                          ]
                                        }
                              />
                              <TextElement
                                        style={
                                                  Array [
                                                            Object {
                                                              "backgroundColor": "rgba(0,0,0,0)",
                                                              "color": "#ffffff",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            Object {
                                                              "color": "blue",
                                                            },
                                                          ]
                                        }
                              />
                    </View>
          </Image>
</TouchableOpacity>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <FeaturedTile
    captionStyle={
        Object {
            "color": "blue",
          }
    }
    containerStyle={
        Object {
            "height": 70,
          }
    }
    icon={
        Object {
            "name": "play-circle",
            "type": "font-awesome",
          }
    }
    iconContainerStyle={
        Object {
            "height": 70,
          }
    }
    imageContainerStyle={
        Object {
            "height": 70,
          }
    }
    imageSrc={
        Object {
            "url": "http://google.com",
          }
    }
    overlayContainerStyle={
        Object {
            "height": 70,
          }
    }
    titleStyle={
        Object {
            "backgroundColor": "yellow",
          }
    }
/>,
}
`;

exports[`FeaturedTitle component should render with width and height 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={undefined}
    style={
        Array [
            Object {
              "height": 20,
              "width": 34,
            },
            undefined,
          ]
    }
>
    <Image
        source={
            Object {
                "url": "http://google.com",
              }
        }
        style={
            Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "height": 20,
                  "justifyContent": "center",
                  "resizeMode": "cover",
                  "width": 34,
                },
                undefined,
              ]
        }
    >
        <View
            style={
                Array [
                    Object {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "backgroundColor": "rgba(0,0,0,0.2)",
                      "bottom": 0,
                      "flex": 1,
                      "justifyContent": "center",
                      "left": 0,
                      "paddingBottom": 40,
                      "paddingLeft": 25,
                      "paddingRight": 25,
                      "paddingTop": 45,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    undefined,
                  ]
            }
        >
            <View
                style={
                    Array [
                        Object {
                          "alignItems": "center",
                          "alignSelf": "center",
                          "justifyContent": "center",
                        },
                        undefined,
                      ]
                }
            />
            <TextElement
                h4={true}
                style={
                    Array [
                        Object {
                          "backgroundColor": "rgba(0,0,0,0)",
                          "color": "#ffffff",
                          "marginBottom": 15,
                          "textAlign": "center",
                        },
                        undefined,
                      ]
                }
            />
            <TextElement
                style={
                    Array [
                        Object {
                          "backgroundColor": "rgba(0,0,0,0)",
                          "color": "#ffffff",
                          "marginBottom": 15,
                          "textAlign": "center",
                        },
                        undefined,
                      ]
                }
            />
        </View>
    </Image>
</TouchableOpacity>,
  "nodes": Array [
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onPress={undefined}
      style={
            Array [
                  Object {
                    "height": 20,
                    "width": 34,
                  },
                  undefined,
                ]
      }
>
      <Image
            source={
                  Object {
                        "url": "http://google.com",
                      }
            }
            style={
                  Array [
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#ffffff",
                          "height": 20,
                          "justifyContent": "center",
                          "resizeMode": "cover",
                          "width": 34,
                        },
                        undefined,
                      ]
            }
      >
            <View
                  style={
                        Array [
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "rgba(0,0,0,0.2)",
                                "bottom": 0,
                                "flex": 1,
                                "justifyContent": "center",
                                "left": 0,
                                "paddingBottom": 40,
                                "paddingLeft": 25,
                                "paddingRight": 25,
                                "paddingTop": 45,
                                "position": "absolute",
                                "right": 0,
                                "top": 0,
                              },
                              undefined,
                            ]
                  }
            >
                  <View
                        style={
                              Array [
                                    Object {
                                      "alignItems": "center",
                                      "alignSelf": "center",
                                      "justifyContent": "center",
                                    },
                                    undefined,
                                  ]
                        }
                  />
                  <TextElement
                        h4={true}
                        style={
                              Array [
                                    Object {
                                      "backgroundColor": "rgba(0,0,0,0)",
                                      "color": "#ffffff",
                                      "marginBottom": 15,
                                      "textAlign": "center",
                                    },
                                    undefined,
                                  ]
                        }
                  />
                  <TextElement
                        style={
                              Array [
                                    Object {
                                      "backgroundColor": "rgba(0,0,0,0)",
                                      "color": "#ffffff",
                                      "marginBottom": 15,
                                      "textAlign": "center",
                                    },
                                    undefined,
                                  ]
                        }
                  />
            </View>
      </Image>
</TouchableOpacity>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <FeaturedTile
        height={20}
        imageSrc={
                Object {
                        "url": "http://google.com",
                      }
        }
        width={34}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "height": 20,
          "imageSrc": Object {
            "url": "http://google.com",
          },
          "width": 34,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "height": 20,
                                "width": 34,
                              },
                              undefined,
                            ]
          }
>
          <Image
                    source={
                              Object {
                                        "url": "http://google.com",
                                      }
                    }
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "backgroundColor": "#ffffff",
                                          "height": 20,
                                          "justifyContent": "center",
                                          "resizeMode": "cover",
                                          "width": 34,
                                        },
                                        undefined,
                                      ]
                    }
          >
                    <View
                              style={
                                        Array [
                                                  Object {
                                                    "alignItems": "center",
                                                    "alignSelf": "stretch",
                                                    "backgroundColor": "rgba(0,0,0,0.2)",
                                                    "bottom": 0,
                                                    "flex": 1,
                                                    "justifyContent": "center",
                                                    "left": 0,
                                                    "paddingBottom": 40,
                                                    "paddingLeft": 25,
                                                    "paddingRight": 25,
                                                    "paddingTop": 45,
                                                    "position": "absolute",
                                                    "right": 0,
                                                    "top": 0,
                                                  },
                                                  undefined,
                                                ]
                              }
                    >
                              <View
                                        style={
                                                  Array [
                                                            Object {
                                                              "alignItems": "center",
                                                              "alignSelf": "center",
                                                              "justifyContent": "center",
                                                            },
                                                            undefined,
                                                          ]
                                        }
                              />
                              <TextElement
                                        h4={true}
                                        style={
                                                  Array [
                                                            Object {
                                                              "backgroundColor": "rgba(0,0,0,0)",
                                                              "color": "#ffffff",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            undefined,
                                                          ]
                                        }
                              />
                              <TextElement
                                        style={
                                                  Array [
                                                            Object {
                                                              "backgroundColor": "rgba(0,0,0,0)",
                                                              "color": "#ffffff",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            undefined,
                                                          ]
                                        }
                              />
                    </View>
          </Image>
</TouchableOpacity>,
        "_debugID": 4,
        "_renderedOutput": <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "height": 20,
                                "width": 34,
                              },
                              undefined,
                            ]
          }
>
          <Image
                    source={
                              Object {
                                        "url": "http://google.com",
                                      }
                    }
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "backgroundColor": "#ffffff",
                                          "height": 20,
                                          "justifyContent": "center",
                                          "resizeMode": "cover",
                                          "width": 34,
                                        },
                                        undefined,
                                      ]
                    }
          >
                    <View
                              style={
                                        Array [
                                                  Object {
                                                    "alignItems": "center",
                                                    "alignSelf": "stretch",
                                                    "backgroundColor": "rgba(0,0,0,0.2)",
                                                    "bottom": 0,
                                                    "flex": 1,
                                                    "justifyContent": "center",
                                                    "left": 0,
                                                    "paddingBottom": 40,
                                                    "paddingLeft": 25,
                                                    "paddingRight": 25,
                                                    "paddingTop": 45,
                                                    "position": "absolute",
                                                    "right": 0,
                                                    "top": 0,
                                                  },
                                                  undefined,
                                                ]
                              }
                    >
                              <View
                                        style={
                                                  Array [
                                                            Object {
                                                              "alignItems": "center",
                                                              "alignSelf": "center",
                                                              "justifyContent": "center",
                                                            },
                                                            undefined,
                                                          ]
                                        }
                              />
                              <TextElement
                                        h4={true}
                                        style={
                                                  Array [
                                                            Object {
                                                              "backgroundColor": "rgba(0,0,0,0)",
                                                              "color": "#ffffff",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            undefined,
                                                          ]
                                        }
                              />
                              <TextElement
                                        style={
                                                  Array [
                                                            Object {
                                                              "backgroundColor": "rgba(0,0,0,0)",
                                                              "color": "#ffffff",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            undefined,
                                                          ]
                                        }
                              />
                    </View>
          </Image>
</TouchableOpacity>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <FeaturedTile
    height={20}
    imageSrc={
        Object {
            "url": "http://google.com",
          }
    }
    width={34}
/>,
}
`;

exports[`FeaturedTitle component should render without issues 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={undefined}
    style={
        Array [
            Object {
              "height": 600,
              "width": 750,
            },
            undefined,
          ]
    }
>
    <Image
        source={
            Object {
                "url": "http://google.com",
              }
        }
        style={
            Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#ffffff",
                  "height": 600,
                  "justifyContent": "center",
                  "resizeMode": "cover",
                  "width": 750,
                },
                undefined,
              ]
        }
    >
        <View
            style={
                Array [
                    Object {
                      "alignItems": "center",
                      "alignSelf": "stretch",
                      "backgroundColor": "rgba(0,0,0,0.2)",
                      "bottom": 0,
                      "flex": 1,
                      "justifyContent": "center",
                      "left": 0,
                      "paddingBottom": 40,
                      "paddingLeft": 25,
                      "paddingRight": 25,
                      "paddingTop": 45,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    undefined,
                  ]
            }
        >
            <View
                style={
                    Array [
                        Object {
                          "alignItems": "center",
                          "alignSelf": "center",
                          "justifyContent": "center",
                        },
                        undefined,
                      ]
                }
            />
            <TextElement
                h4={true}
                style={
                    Array [
                        Object {
                          "backgroundColor": "rgba(0,0,0,0)",
                          "color": "#ffffff",
                          "marginBottom": 15,
                          "textAlign": "center",
                        },
                        undefined,
                      ]
                }
            />
            <TextElement
                style={
                    Array [
                        Object {
                          "backgroundColor": "rgba(0,0,0,0)",
                          "color": "#ffffff",
                          "marginBottom": 15,
                          "textAlign": "center",
                        },
                        undefined,
                      ]
                }
            />
        </View>
    </Image>
</TouchableOpacity>,
  "nodes": Array [
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onPress={undefined}
      style={
            Array [
                  Object {
                    "height": 600,
                    "width": 750,
                  },
                  undefined,
                ]
      }
>
      <Image
            source={
                  Object {
                        "url": "http://google.com",
                      }
            }
            style={
                  Array [
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#ffffff",
                          "height": 600,
                          "justifyContent": "center",
                          "resizeMode": "cover",
                          "width": 750,
                        },
                        undefined,
                      ]
            }
      >
            <View
                  style={
                        Array [
                              Object {
                                "alignItems": "center",
                                "alignSelf": "stretch",
                                "backgroundColor": "rgba(0,0,0,0.2)",
                                "bottom": 0,
                                "flex": 1,
                                "justifyContent": "center",
                                "left": 0,
                                "paddingBottom": 40,
                                "paddingLeft": 25,
                                "paddingRight": 25,
                                "paddingTop": 45,
                                "position": "absolute",
                                "right": 0,
                                "top": 0,
                              },
                              undefined,
                            ]
                  }
            >
                  <View
                        style={
                              Array [
                                    Object {
                                      "alignItems": "center",
                                      "alignSelf": "center",
                                      "justifyContent": "center",
                                    },
                                    undefined,
                                  ]
                        }
                  />
                  <TextElement
                        h4={true}
                        style={
                              Array [
                                    Object {
                                      "backgroundColor": "rgba(0,0,0,0)",
                                      "color": "#ffffff",
                                      "marginBottom": 15,
                                      "textAlign": "center",
                                    },
                                    undefined,
                                  ]
                        }
                  />
                  <TextElement
                        style={
                              Array [
                                    Object {
                                      "backgroundColor": "rgba(0,0,0,0)",
                                      "color": "#ffffff",
                                      "marginBottom": 15,
                                      "textAlign": "center",
                                    },
                                    undefined,
                                  ]
                        }
                  />
            </View>
      </Image>
</TouchableOpacity>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <FeaturedTile
        imageSrc={
                Object {
                        "url": "http://google.com",
                      }
        }
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "imageSrc": Object {
            "url": "http://google.com",
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "height": 600,
                                "width": 750,
                              },
                              undefined,
                            ]
          }
>
          <Image
                    source={
                              Object {
                                        "url": "http://google.com",
                                      }
                    }
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "backgroundColor": "#ffffff",
                                          "height": 600,
                                          "justifyContent": "center",
                                          "resizeMode": "cover",
                                          "width": 750,
                                        },
                                        undefined,
                                      ]
                    }
          >
                    <View
                              style={
                                        Array [
                                                  Object {
                                                    "alignItems": "center",
                                                    "alignSelf": "stretch",
                                                    "backgroundColor": "rgba(0,0,0,0.2)",
                                                    "bottom": 0,
                                                    "flex": 1,
                                                    "justifyContent": "center",
                                                    "left": 0,
                                                    "paddingBottom": 40,
                                                    "paddingLeft": 25,
                                                    "paddingRight": 25,
                                                    "paddingTop": 45,
                                                    "position": "absolute",
                                                    "right": 0,
                                                    "top": 0,
                                                  },
                                                  undefined,
                                                ]
                              }
                    >
                              <View
                                        style={
                                                  Array [
                                                            Object {
                                                              "alignItems": "center",
                                                              "alignSelf": "center",
                                                              "justifyContent": "center",
                                                            },
                                                            undefined,
                                                          ]
                                        }
                              />
                              <TextElement
                                        h4={true}
                                        style={
                                                  Array [
                                                            Object {
                                                              "backgroundColor": "rgba(0,0,0,0)",
                                                              "color": "#ffffff",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            undefined,
                                                          ]
                                        }
                              />
                              <TextElement
                                        style={
                                                  Array [
                                                            Object {
                                                              "backgroundColor": "rgba(0,0,0,0)",
                                                              "color": "#ffffff",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            undefined,
                                                          ]
                                        }
                              />
                    </View>
          </Image>
</TouchableOpacity>,
        "_debugID": 2,
        "_renderedOutput": <TouchableOpacity
          activeOpacity={0.2}
          focusedOpacity={0.7}
          onPress={undefined}
          style={
                    Array [
                              Object {
                                "height": 600,
                                "width": 750,
                              },
                              undefined,
                            ]
          }
>
          <Image
                    source={
                              Object {
                                        "url": "http://google.com",
                                      }
                    }
                    style={
                              Array [
                                        Object {
                                          "alignItems": "center",
                                          "backgroundColor": "#ffffff",
                                          "height": 600,
                                          "justifyContent": "center",
                                          "resizeMode": "cover",
                                          "width": 750,
                                        },
                                        undefined,
                                      ]
                    }
          >
                    <View
                              style={
                                        Array [
                                                  Object {
                                                    "alignItems": "center",
                                                    "alignSelf": "stretch",
                                                    "backgroundColor": "rgba(0,0,0,0.2)",
                                                    "bottom": 0,
                                                    "flex": 1,
                                                    "justifyContent": "center",
                                                    "left": 0,
                                                    "paddingBottom": 40,
                                                    "paddingLeft": 25,
                                                    "paddingRight": 25,
                                                    "paddingTop": 45,
                                                    "position": "absolute",
                                                    "right": 0,
                                                    "top": 0,
                                                  },
                                                  undefined,
                                                ]
                              }
                    >
                              <View
                                        style={
                                                  Array [
                                                            Object {
                                                              "alignItems": "center",
                                                              "alignSelf": "center",
                                                              "justifyContent": "center",
                                                            },
                                                            undefined,
                                                          ]
                                        }
                              />
                              <TextElement
                                        h4={true}
                                        style={
                                                  Array [
                                                            Object {
                                                              "backgroundColor": "rgba(0,0,0,0)",
                                                              "color": "#ffffff",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            undefined,
                                                          ]
                                        }
                              />
                              <TextElement
                                        style={
                                                  Array [
                                                            Object {
                                                              "backgroundColor": "rgba(0,0,0,0)",
                                                              "color": "#ffffff",
                                                              "marginBottom": 15,
                                                              "textAlign": "center",
                                                            },
                                                            undefined,
                                                          ]
                                        }
                              />
                    </View>
          </Image>
</TouchableOpacity>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <FeaturedTile
    imageSrc={
        Object {
            "url": "http://google.com",
          }
    }
/>,
}
`;
